--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 SECRET_KEY=3d8c4e2e5a128f3f94d664f0856d4894f944c5d40cf4cb3d
+DEBUG="True"
+CLOUDINARY_API_KEY=934138634745457
+CLOUDINARY_SECRET=biMjYbdjTZVZxSlSslxsvZhXQE0
